2008-02-10  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/command.c,
	plugins/debug-manager/command.h,
	plugins/debug-manager/breakpoints.c,
	libanjuta/interfaces/libanjuta.idl:
	Avoid adding the same breakpoint several times

	* plugins/gdb/debugger.c:
	Fix bug #515463: Deattaching process kill it

2008-02-10  Sébastien Granjoux  <seb.sfo@free.fr>

	* manuals/anjuta-manual/C/debugger.xml:
	Fix translation bug #515459 and #515460

2008-02-10  Johannes Schmid <jhs@gnome.org>

  Patch from Rémi Cardona <remi@gentoo.org>

	* plugins/build-basic-autotools/Makefile.am:
	* plugins/cvs-plugin/Makefile.am:
	* plugins/document-manager/Makefile.am:
	* plugins/editor/Makefile.am:
	* plugins/indent/Makefile.am:
	* plugins/language-support-cpp-java/Makefile.am:
	* plugins/message-view/Makefile.am:
	* plugins/sourceview/Makefile.am:
	* plugins/symbol-browser/Makefile.am:
	* plugins/terminal/Makefile.am:
	* scripts/build-schemas.mk:
	* src/Makefile.am:
  Fix #512531 – Parallel build fails
  
  * AUTHORS: Added Rémi

2008-02-10  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/queue.c:
	Fix interrupt command, not working due to previous change

2008-02-10  Johannes Schmid <jhs@gnome.org>

	* src/Makefile.am:
	* src/anjuta-app.c:
	* src/anjuta-callbacks.c (removed):
	* src/anjuta-callbacks.h (removed):
	
	Removed (almost) empty files, fixes #515383 and #515388

2008-02-09  James Liggett <jrliggett@cox.net>

	Reviewed by Naba Kumar  <naba@gnome.org>:

	* plugins/subversion/svn-add-command.c: (svn_add_command_new):
	* plugins/subversion/svn-cat-command.c: (svn_cat_command_new):
	* plugins/subversion/svn-command.c:
	(svn_command_make_canonical_path):
	* plugins/subversion/svn-command.h:
	* plugins/subversion/svn-copy-command.c: (svn_copy_command_new):
	* plugins/subversion/svn-diff-command.c: (svn_diff_command_new):
	* plugins/subversion/svn-log-command.c: (svn_log_command_new):
	* plugins/subversion/svn-merge-command.c: (svn_merge_command_new):